Add section of binary search tree. Make all table align center.

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -20,3 +20,13 @@
     --md-typeset-color: #FEFEFE;
     --md-typeset-a-color: #31BC5A;
 }
+
+/* Center Markdown Tables (requires md_in_html extension) */
+.center-table {
+    text-align: center;
+}
+
+.md-typeset .center-table :is(td,th):not([align]) {
+    /* Reset alignment for table cells */
+    text-align: initial;
+}
