Add bubble sort, insertion sort.

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,6 +1,7 @@
+
+/* Color Settings */
 /* https://github.com/squidfunk/mkdocs-material/blob/6b5035f5580f97532d664e3d1babf5f320e88ee9/src/assets/stylesheets/main/_colors.scss */
 /* https://squidfunk.github.io/mkdocs-material/setup/changing-the-colors/#custom-colors */
-
 :root > * {
     --md-primary-fg-color: #FFFFFF;
     --md-primary-bg-color: #1D1D20;
@@ -29,4 +30,15 @@
 .md-typeset .center-table :is(td,th):not([align]) {
     /* Reset alignment for table cells */
     text-align: initial;
+}
+
+
+/* Markdown Header */
+.md-typeset h1 {
+  font-weight: 400;
+  color: var(--md-default-fg-color);
+}
+
+.md-typeset h2 {
+  font-weight: 400;
 }
