--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -57,3 +57,8 @@
   display: block;
   margin: 0 auto;
 }
+
+/* font-family setting for Win10 */
+body {
+  --md-code-font-family: var(--md-code-font, _), SFMono-Regular, Consolas, Menlo, Noto Sans SC, monospace;
+}
