feat: Move the pagination nav above the comments

--- a/docs/overrides/partials/footer.html
+++ b/docs/overrides/partials/footer.html
@@ -7,7 +7,7 @@
       {% if page.meta and page.meta.hide %}
         {% set hidden = "hidden" if "footer" in page.meta.hide %}
       {% endif %}
-      // 翻页导航栏
+      <!-- 翻页导航栏 -->
       <!-- <nav class="md-footer__inner md-grid" aria-label="{{ lang.t('footer') }}" {{ hidden }}>
         {% if page.previous_page %}
           {% set direction = lang.t("footer.previous") %}
