--- a/overrides/partials/comments.html
+++ b/overrides/partials/comments.html
@@ -1,5 +1,5 @@
 {% if page.meta.comments %}
-  <h5 align="center" id="__comments">{{ "欢迎你提出疑问或建议" }}</h5>
+  <h5 align="center" id="__comments">{{ "欢迎在评论区提出疑问或建议" }}</h5>
   <!-- Insert generated snippet here -->
   <script 
     src="https://giscus.app/client.js"
