--- a/overrides/partials/comments.html
+++ b/overrides/partials/comments.html
@@ -1,6 +1,6 @@
 {% if page.meta.comments %}
   {% if config.theme.language == 'zh' %}
-    {% set comm = "欢迎在评论区留下你的见解、疑惑或建议" %}
+    {% set comm = "欢迎在评论区留下你的见解、问题或建议" %}
     {% set lang = "zh-CN" %}
   {% elif config.theme.language == 'en' %}
     {% set comm = "Feel free to drop your insights, questions or suggestions" %}
