--- a/overrides/stylesheets/extra.css
+++ b/overrides/stylesheets/extra.css
@@ -22,6 +22,7 @@
   --md-typeset-btn-hover-color: #52bbb1;
 
   --md-admonition-icon--pythontutor: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M19.14 7.5A2.86 2.86 0 0 1 22 10.36v3.78A2.86 2.86 0 0 1 19.14 17H12c0 .39.32.96.71.96H17v1.68a2.86 2.86 0 0 1-2.86 2.86H9.86A2.86 2.86 0 0 1 7 19.64v-3.75a2.85 2.85 0 0 1 2.86-2.85h5.25a2.85 2.85 0 0 0 2.85-2.86V7.5h1.18m-4.28 11.79c-.4 0-.72.3-.72.89 0 .59.32.71.72.71a.71.71 0 0 0 .71-.71c0-.59-.32-.89-.71-.89m-10-1.79A2.86 2.86 0 0 1 2 14.64v-3.78A2.86 2.86 0 0 1 4.86 8H12c0-.39-.32-.96-.71-.96H7V5.36A2.86 2.86 0 0 1 9.86 2.5h4.28A2.86 2.86 0 0 1 17 5.36v3.75a2.85 2.85 0 0 1-2.86 2.85H8.89a2.85 2.85 0 0 0-2.85 2.86v2.68H4.86M9.14 5.71c.4 0 .72-.3.72-.89 0-.59-.32-.71-.72-.71-.39 0-.71.12-.71.71s.32.89.71.89Z"/></svg>');
+  --md-admonition-pythontutor-color: #eee;
 }
 
 [data-md-color-scheme="slate"] {
@@ -45,6 +46,8 @@
 
   --md-typeset-btn-color: #52bbb1;
   --md-typeset-btn-hover-color: #55aea6;
+
+  --md-admonition-pythontutor-color: #30363f;
 }
 
 /* https://github.com/squidfunk/mkdocs-material/issues/4832#issuecomment-1374891676 */
@@ -178,10 +181,11 @@ body {
 /* Admonition for python tutor */
 .md-typeset .admonition.pythontutor,
 .md-typeset details.pythontutor {
-  border: none;
+  border-color: var(--md-default-fg-color--lightest);
 }
 
-.md-typeset .admonition:focus-within, .md-typeset details:focus-within {
+.md-typeset .admonition:focus-within,
+.md-typeset details:focus-within {
   box-shadow: var(--md-shadow-z1);
 }
 
@@ -193,5 +197,10 @@ body {
 .md-typeset .pythontutor > summary::before {
   background-color: rgb(55, 118, 171);
   -webkit-mask-image: var(--md-admonition-icon--pythontutor);
-          mask-image: var(--md-admonition-icon--pythontutor);
+  mask-image: var(--md-admonition-icon--pythontutor);
+}
+
+.md-typeset .admonition-title:before,
+.md-typeset summary:before {
+  width: 1.25em;
 }
