Fix backfrop-filter on Safari

--- a/overrides/stylesheets/extra.css
+++ b/overrides/stylesheets/extra.css
@@ -69,6 +69,7 @@
   box-shadow: none;
   transition: none;
   backdrop-filter: saturate(180%) blur(20px); /* Gaussian blur */
+  -webkit-backdrop-filter: saturate(180%) blur(20px); /* Safari */
   background-color: var(--md-header-bg-color);
 }
 
