Add the introduction to the paper book.

--- a/overrides/stylesheets/extra.css
+++ b/overrides/stylesheets/extra.css
@@ -522,3 +522,17 @@ a:hover .text-button span {
     flex-basis: 25%;
   }
 }
+
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 */
+  height: 0;
+}
+
+.video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
